create submission on delete data
