# packages/data-provider/src/controllers/submittedDataController.ts
@@ -25,24 +25,16 @@ const controller = (dependencies: BaseDependencies) => {
 			try {
 				const systemId = req.params.systemId;
 
-				// Gives false value except when query param is explicitly true
-				const dryRun = req.query.dryRun?.toLowerCase() === 'true';
-
-				const comment = req.query.comment;
-
-				logger.info(LOG_MODULE, `Request Delete Submitted Data systemId '${systemId}' dryRun '${dryRun}'`);
+				logger.info(LOG_MODULE, `Request Delete Submitted Data systemId '${systemId}'`);
 
 				// TODO: get userName from auth
 				const userName = '';
 
-				const deletedRecords = await service.deleteSubmittedDataBySystemId(systemId, dryRun, comment, userName);
+				const deletedRecords = await service.deleteSubmittedDataBySystemId(systemId, userName);
 
 				const response = {
-					data: deletedRecords,
-					metadata: {
-						totalRecords: deletedRecords.length,
-						dryRun,
-					},
+					submissionId: deletedRecords.submissionId,
+					records: deletedRecords.data,
 				};
 
 				return res.status(200).send(response);
